<resources>
    <string name="fragment_register">Register</string>
    <string name="register_fullname">Full Name</string>
    <string name="register_username">Email/Username</string>
    <string name="register_password">Password</string>
    <string name="register_password_confirm">Confirm Password</string>
    <string name="register_action">Signup</string>
    <string name="dialog_register">Signing up …</string>
    <string name="warn_register_success">You\'ve logged into account!</string>
    <string name="warn_register_invalid">Check inputs!</string>
    <string name="warn_register_failed">Can\'t Register</string>
</resources>
